src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeliveryInstallationStatus__c</fullName>
        <label>Delivery/Installation Status</label>
        <picklist>
            <picklistValues>
                <fullName>In progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yet to begin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Discount_Type__c</fullName>
        <label>Discount Type</label>
        <picklist>
            <picklistValues>
                <fullName>Brokerage allowance</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Bulk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coupons</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cumulative quantity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dollar Value</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Educational or student</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forward dating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Military</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-cumulative quantity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partial payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Percentage Based</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preferred payment method</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Promotional allowances</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prompt payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quantity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rebates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seasonal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Senior</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Settlement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sliding scale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special prices offered to friends of the seller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special prices offered to local residents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Toddler / child / kid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade-in credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade rate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MainCompetitors__c</fullName>
        <label>Main Competitor(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderNumber__c</fullName>
        <label>Order Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TrackingNumber__c</fullName>
        <label>Tracking Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_MONTHS:3</value>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Private</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.PRIVATE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Private</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>